added a couple shows to 'Recent Shows'; removed Paris show; changes one of the scrolling quotes; changed the Nate bio;

--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@
                         <ul class="dropdown-menu">
                             <li class="dropdown-header">Recent Shows</li>
                             <li role="separator" class="divider"></li>
+                            <li><a href="http://www.titanee.com/occ">Muscat, Oman - Oman Comedy Central</a></li>
+                            <li><a href="https://www.facebook.com/Standuperi/">Tbilisi, Georgia - STANDUP ერი</a></li>
                             <li><a href="http://www.breakroomdowntown.com/" target="_blank">Topeka, KS - Breakroom</a></li>
                             <li><a href="#">Kansas City, MO - Stanford and Sons, Kick Comedy Theater, Uptown Arts Bar</a></li>
                             <li><a href="#">Lawrence, KS - Replay lounge, Jackpot Saloon, Jazzhaus, Oread</a></li>
@@ -90,11 +92,11 @@
                             <li><a href="http://drovers-dog.com/" target="_blank">Amsterdam, Netherlands - Drover’s Dog</a></li>
                             <li><a href="http://www.kitchbar.com/" target="_blank">Toronto, Ontario - Kitch Komedy</a></li>
                             <li><a href="#">Johannesburg, South Africa - The Box a Goliath and Goliath Production</a></li>
-                            <li><a href="#">Paris, France - A terrible hostel open mic</a></li>
                             <li><a href="http://www.stregisdoha.com/" target="_blank">Doha, Qatar - Jazz at the Lincoln Center at St. Regis</a></li>
                             <li><a href="http://thedomainhotels.com/restaurant_1/txoko.en.html" target="_blank">Manama, Bahrain - Txoko Lounge</a></li>
                             <li><a href="http://www.comedyclubbangkok.com/" target="_blank">Bangkok, Thailand - Comedy Club Bangkok, Stagetime Comedy Club</a></li>
                             <li><a href="http://sydneycomedyclub.com.au" target="_blank">Sydney, Australia - Sydney Comedy Club, Sydney Fringe Festival</a></li>
+                            <li><a href="http://amicinhand.com/" target="_blank">Sydney, Australia - A Mic In Hand, Comedy Lounge</a></li>
                             <li role="separator" class="divider"></li>
                         </ul>
                     </li>
@@ -163,8 +165,8 @@
                 </div>
                 <div class="hero">
                     <hgroup>
-                        <h2>Nate Eubanks is one of the funniest people I know.</h2>
-                        <h4>- Tristan Newell</h4>
+                        <h2>a pleasure to have on our line-up</h2>
+                        <h4>- Sean Morahan</h4>
                     </hgroup>
                     <a href="mailto:nathan.eubanks@gmail.com"><button class="btn btn-hero btn-lg" role="button" type="button">Book Nate</button></a>
                 </div>
@@ -244,8 +246,8 @@
                 <div class="col-md-7 col-md-push-5">
                     <h2 class="featurette-heading">Nate Eubanks</h2>
                     <h4><span class="text-muted"><a href="https://twitter.com/NateEubanks">@NateEubanks</a></span></h4>
-                    <p class="lead">Nate Eubanks grew up in rural Northeast Kansas and later worked internationally in Paraguay and Kuwait. He has performed stand up comedy in eight countries: Canada, Kuwait, Qatar, Bahrain, South Africa, Netherlands, Australia and through
-                        the midwest USA. From 5 star hotels in Qatar, art galleries in Johannesburg, garages in Chicago, and finally clubs in Sydney, Nate brings the laughs to every audience.</p>
+                    <p class="lead">Nate Eubanks grew up in rural Northeast Kansas and later worked internationally in Paraguay and Kuwait. He has performed stand-up comedy in ten countries: Canada, Kuwait, Qatar, Bahrain, South Africa, Netherlands, Australia, Thailand,
+                        Georgia, Oman and through the midwest USA. From 5 star hotels in Qatar, art galleries in Johannesburg, garages in Chicago, and finally clubs in Sydney, Nate brings the laughs to every audience.</p>
                 </div>
                 <div class="col-md-5 col-md-pull-7">
                     <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" src="images/head2.jpg" alt="Image of Nate">
@@ -325,4 +327,5 @@
 <![endif]-->
 
 </body>
+
 </html>
