--- a/reviews.html
+++ b/reviews.html
@@ -82,22 +82,23 @@
                         <ul class="dropdown-menu">
                             <li class="dropdown-header">Recent Shows</li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="http://www.breakroomdowntown.com/" target="_blank">Topeka, KS - Breakroom</a></li>
-                            <li><a href="#">Kansas City, MO - Stanford and Sons, Kick Comedy Theater, Uptown Arts Bar</a></li>
-                            <li><a href="#">Lawrence, KS - Replay lounge, Jackpot Saloon, Jazzhaus, Oread</a></li>
-                            <li><a href="http://www.riley.army.mil/" target="_blank">Fort Riley, KS - Fort Riley Military Base</a></li>
-                            <li><a href="https://www.facebook.com/zoolarious/" target="_blank">Lincoln, NE - Zoolarious</a></li>
-                            <li><a href="http://www.livekuwait.com/" target="_blank">Kuwait City, Kuwait - The Live Theater, Bayt Lothan</a></li>
-                            <li><a href="http://shitholehq.com" target="_blank">Chicago, IL - The Shit Hole</a></li>
-                            <li><a href="http://drovers-dog.com/" target="_blank">Amsterdam, Netherlands - Drover’s Dog</a></li>
-                            <li><a href="http://www.kitchbar.com/" target="_blank">Toronto, Ontario - Kitch Komedy</a></li>
-                            <li><a href="#">Johannesburg, South Africa - The Box a Goliath and Goliath Production</a></li>
-                            <li><a href="#">Paris, France - A terrible hostel open mic</a></li>
-                            <li><a href="http://www.stregisdoha.com/" target="_blank">Doha, Qatar - Jazz at the Lincoln Center at St. Regis</a></li>
-                            <li><a href="http://thedomainhotels.com/restaurant_1/txoko.en.html" target="_blank">Manama, Bahrain - Txoko Lounge</a></li>
+                            <li><a href="http://www.titanee.com/occ">Muscat, Oman - Oman Comedy Central</a></li>
+                            <li><a href="https://www.facebook.com/standuperi/">tbilisi, georgia - standup ერი</a></li>
+                            <li><a href="http://www.breakroomdowntown.com/" target="_blank">topeka, ks - breakroom</a></li>
+                            <li><a href="#">kansas city, mo - stanford and sons, kick comedy theater, uptown arts bar</a></li>
+                            <li><a href="#">lawrence, ks - replay lounge, jackpot saloon, jazzhaus, oread</a></li>
+                            <li><a href="http://www.riley.army.mil/" target="_blank">fort riley, ks - fort riley military base</a></li>
+                            <li><a href="https://www.facebook.com/zoolarious/" target="_blank">lincoln, ne - zoolarious</a></li>
+                            <li><a href="http://www.livekuwait.com/" target="_blank">kuwait city, kuwait - the live theater, bayt lothan</a></li>
+                            <li><a href="http://shitholehq.com" target="_blank">chicago, il - the shit hole</a></li>
+                            <li><a href="http://drovers-dog.com/" target="_blank">amsterdam, netherlands - drover’s dog</a></li>
+                            <li><a href="http://www.kitchbar.com/" target="_blank">toronto, ontario - kitch komedy</a></li>
+                            <li><a href="#">johannesburg, south africa - the box a goliath and goliath production</a></li>
+                            <li><a href="http://www.stregisdoha.com/" target="_blank">doha, qatar - jazz at the lincoln center at st. regis</a></li>
+                            <li><a href="http://thedomainhotels.com/restaurant_1/txoko.en.html" target="_blank">manama, bahrain - txoko lounge</a></li>
                             <li><a href="http://www.comedyclubbangkok.com/" target="_blank">Bangkok, Thailand - Comedy Club Bangkok, Stagetime Comedy Club</a></li>
                             <a href="http://sydneycomedyclub.com.au" target="_blank">Sydney, Australia - Sydney Comedy Club, Sydney Fringe Festival</a></li>
-                            <li role="separator" class="divider"></li>
+                            <li><a href="http://amicinhand.com/" target="_blank">Sydney, Australia - A Mic In Hand, Comedy Lounge</a></li>
                             <li role="separator" class="divider"></li>
                         </ul>
                     </li>
