fixed ngtweet injector err (typ0); changed recent shows list;

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <script src="js/angularjs/angular-route.min.js"></script>
 
     <!-- ngTweet -->
-    <script src="js/ngTweet.min.js"></script>
+    <script src="js/ngtweet.min.js"></script>
 
     </script>
     <!-- bootstrap dependencies -->
