--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                 <div class="col-md-7 col-md-push-5">
                     <h2 class="featurette-heading">Nate Eubanks</h2>
                     <h4><span class="text-muted"><a href="https://twitter.com/NateEubanks">@NateEubanks</a></span></h4>
-                    <p class="lead">Nate Eubanks grew up in rural Northeast Kansas and later worked internationally in Paraguay and Kuwait. He has performed stand-up comedy in ten countries: Canada, Kuwait, Qatar, Bahrain, South Africa, Netherlands, Australia, Thailand,
+                    <p class="lead">Nate Eubanks grew up in rural Northeast Kansas and later worked internationally in Paraguay and Kuwait. He has performed stand-up comedy in eleven countries: Canada, Kuwait, Qatar, Bahrain, South Africa, Netherlands, Australia, Thailand,
                         Georgia, Oman and through the midwest USA. From 5 star hotels in Qatar, art galleries in Johannesburg, garages in Chicago, and finally clubs in Sydney, Nate brings the laughs to every audience.</p>
                 </div>
                 <div class="col-md-5 col-md-pull-7">
