added past shows, updated bio

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
     <!-- Google Analytics
     =============================================================================================-->
     <script>
-        (function(i, s, o, g, r, a, m) {
+        (function (i, s, o, g, r, a, m) {
             i['GoogleAnalyticsObject'] = r;
-            i[r] = i[r] || function() {
+            i[r] = i[r] || function () {
                 (i[r].q = i[r].q || []).push(arguments)
             }, i[r].l = 1 * new Date();
             a = s.createElement(o),
@@ -85,18 +85,29 @@
                             <li><a href="http://www.breakroomdowntown.com/" target="_blank">Topeka, KS - Breakroom</a></li>
                             <li><a href="#">Kansas City, MO - Stanford and Sons, Kick Comedy Theater, Uptown Arts Bar</a></li>
                             <li><a href="#">Lawrence, KS - Replay lounge, Jackpot Saloon, Jazzhaus, Oread</a></li>
-                            <li><a href="http://www.riley.army.mil/" target="_blank">Fort Riley, KS - Fort Riley Military Base</a></li>
+                            <li><a href="http://www.riley.army.mil/" target="_blank">Fort Riley, KS - Fort Riley
+                                    Military Base</a></li>
                             <li><a href="https://www.facebook.com/zoolarious/" target="_blank">Lincoln, NE - Zoolarious</a></li>
-                            <li><a href="http://www.livekuwait.com/" target="_blank">Kuwait City, Kuwait - The Live Theater, Bayt Lothan</a></li>
+                            <li><a href="http://www.livekuwait.com/" target="_blank">Kuwait City, Kuwait - The Live
+                                    Theater, Bayt Lothan</a></li>
                             <li><a href="http://shitholehq.com" target="_blank">Chicago, IL - The Shit Hole</a></li>
                             <li><a href="http://drovers-dog.com/" target="_blank">Amsterdam, Netherlands - Drover’s Dog</a></li>
                             <li><a href="http://www.kitchbar.com/" target="_blank">Toronto, Ontario - Kitch Komedy</a></li>
                             <li><a href="#">Johannesburg, South Africa - The Box a Goliath and Goliath Production</a></li>
-                            <li><a href="http://www.stregisdoha.com/" target="_blank">Doha, Qatar - Jazz at the Lincoln Center at St. Regis</a></li>
-                            <li><a href="http://thedomainhotels.com/restaurant_1/txoko.en.html" target="_blank">Manama, Bahrain - Txoko Lounge</a></li>
-                            <li><a href="http://www.comedyclubbangkok.com/" target="_blank">Bangkok, Thailand - Comedy Club Bangkok, Stagetime Comedy Club</a></li>
-                            <li><a href="http://sydneycomedyclub.com.au" target="_blank">Sydney, Australia - Sydney Comedy Club, Sydney Fringe Festival</a></li>
-                            <li><a href="http://amicinhand.com/" target="_blank">Sydney, Australia - A Mic In Hand, Comedy Lounge</a></li>
+                            <li><a href="http://www.stregisdoha.com/" target="_blank">Doha, Qatar - Jazz at the Lincoln
+                                    Center at St. Regis</a></li>
+                            <li><a href="http://thedomainhotels.com/restaurant_1/txoko.en.html" target="_blank">Manama,
+                                    Bahrain - Txoko Lounge</a></li>
+                            <li><a href="http://www.comedyclubbangkok.com/" target="_blank">Bangkok, Thailand - Comedy
+                                    Club Bangkok, Stagetime Comedy Club</a></li>
+                            <li><a href="http://sydneycomedyclub.com.au" target="_blank">Sydney, Australia - Sydney
+                                    Comedy Club, Sydney Fringe Festival</a></li>
+                            <li><a href="http://amicinhand.com/" target="_blank">Sydney, Australia - A Mic In Hand,
+                                    Comedy Lounge</a></li>
+                            <li><a href="#" target="_blank">Tbilisi, Georgia - Backstage76</a></li>
+                            <li><a href="https://www.facebook.com/events/2139664302710758/" target="_blank">Moscow,
+                                    Russia - The Loft Moscow</a></li>
+                            <li><a href="#" target="_blank">St. Petersburg, Russia - Art-Lab Medovarus</a></li>
                             <li role="separator" class="divider"></li>
                         </ul>
                     </li>
@@ -168,7 +179,8 @@
                         <h2>a pleasure to have on our line-up</h2>
                         <h4>- Sean Morahan</h4>
                     </hgroup>
-                    <a href="mailto:nathan.eubanks@gmail.com"><button class="btn btn-hero btn-lg" role="button" type="button">Book Nate</button></a>
+                    <a href="mailto:nathan.eubanks@gmail.com"><button class="btn btn-hero btn-lg" role="button" type="button">Book
+                            Nate</button></a>
                 </div>
             </div>
             <div class="item slides">
@@ -195,7 +207,7 @@
                 <!-- height attr is not HTML5 compliant but functions; replacing with style tag doesn't work -->
                 <a class="twitter-timeline" href="https://twitter.com/NateEubanks" data-widget-id="649626255378247680" height="500">Tweets by @NateEubanks</a>
                 <script>
-                    ! function(d, s, id) {
+                    ! function (d, s, id) {
                         var js, fjs = d.getElementsByTagName(s)[0],
                             p = /^http:/.test(d.location) ? 'http' : 'https';
                         if (!d.getElementById(id)) {
@@ -246,8 +258,11 @@
                 <div class="col-md-7 col-md-push-5">
                     <h2 class="featurette-heading">Nate Eubanks</h2>
                     <h4><span class="text-muted"><a href="https://twitter.com/NateEubanks">@NateEubanks</a></span></h4>
-                    <p class="lead">Nate Eubanks grew up in rural Northeast Kansas and later worked internationally in Paraguay and Kuwait. He has performed stand-up comedy in eleven countries: Canada, Kuwait, Qatar, Bahrain, South Africa, Netherlands, Australia, Thailand,
-                        Georgia, Oman and through the midwest USA. From 5 star hotels in Qatar, art galleries in Johannesburg, garages in Chicago, and finally clubs in Sydney, Nate brings the laughs to every audience.</p>
+                    <p class="lead">Nate Eubanks grew up in rural Northeast Kansas outside of a town of just over
+                        3,000. He has performed stand-up comedy in 12 countries: Canada, Kuwait, Qatar, Bahrain, South
+                        Africa, Netherlands, Australia, Thailand, Georgia, Oman, Russia and through the midwest USA.
+                        From 5 star hotels in Qatar, art galleries in Johannesburg, garages in Chicago, clubs in
+                        Sydney, and bars in Tbilisi Nate brings the laughs to every audience. </p>
                 </div>
                 <div class="col-md-5 col-md-pull-7">
                     <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" src="images/head2.jpg" alt="Image of Nate">
@@ -296,7 +311,7 @@
     <script type="text/javascript" src="jquery-gcal-flow-3.0.1/jquery.gcal_flow.js"></script>
 
     <script type="text/javascript">
-        $(function() {
+        $(function () {
             $('#gcf-nate-events').gCalFlow({
                 calid: 'j4ttdotndrai1e6grt7bp7i6ko@group.calendar.google.com',
                 // callback: loadLinks(),
