--- a/reviews.html
+++ b/reviews.html
@@ -99,6 +99,9 @@
                             <li><a href="http://www.comedyclubbangkok.com/" target="_blank">Bangkok, Thailand - Comedy Club Bangkok, Stagetime Comedy Club</a></li>
                             <a href="http://sydneycomedyclub.com.au" target="_blank">Sydney, Australia - Sydney Comedy Club, Sydney Fringe Festival</a></li>
                             <li><a href="http://amicinhand.com/" target="_blank">Sydney, Australia - A Mic In Hand, Comedy Lounge</a></li>
+                            <li><a href="#" target="_blank">Tbilisi, Georgia - Backstage76</a></li>
+                            <li><a href="https://www.facebook.com/events/2139664302710758/" target="_blank">Moscow, Russia - The Loft Moscow</a></li>
+                            <li><a href="#" target="_blank">St. Petersburg, Russia - Art-Lab Medovarus</a></li>
                             <li role="separator" class="divider"></li>
                         </ul>
                     </li>
