--- a/nateeubanksNG/src/index.html
+++ b/nateeubanksNG/src/index.html
@@ -13,7 +13,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.png">
 </head>
-<body>
+<body mat-app-background>
   <app-root></app-root>
 </body>
 </html>
