moved image, js, and css assets to ng assets dir; main carousel working in home component;

--- a/nateeubanksNG/src/index.html
+++ b/nateeubanksNG/src/index.html
@@ -1,19 +1,37 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
+    <head>
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+        <!--
+            Stylesheets
+            =============================================================================================
+        -->
+        <link href="/assets/css/bootstrap.min.css" rel="stylesheet" />
+        <link href="/assets/css/style.css" rel="stylesheet" />
+        <link href="/assets/css/fade.css" rel="stylesheet" />
 
-  <meta name="description" content="Nate Eubanks Standup Comedy">
-  <meta name="author" content="Brian Thomas">
+        <meta name="description" content="Nate Eubanks Standup Comedy" />
+        <meta name="author" content="Brian Thomas" />
 
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <title>NateeubanksNG</title>
-  <base href="/">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+        <title>Nate Eubanks</title>
+        <base href="/" />
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.png">
-</head>
-<body mat-app-background>
-  <app-root></app-root>
-</body>
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="icon" type="image/x-icon" href="favicon.png" />
+    </head>
+    <body mat-app-background>
+        <app-root></app-root>
+
+        <!--
+            Bootstrap core JavaScript
+            ==================================================
+        -->
+        <!-- Placed at the end of the document so the pages load faster -->
+        <script src="/assets/js/jquery.min.js"></script>
+        <script src="/assets/js/bootstrap.min.js"></script>
+    </body>
 </html>
