--- a/nateeubanksNG/src/index.html
+++ b/nateeubanksNG/src/index.html
@@ -21,7 +21,7 @@
         <base href="/" />
 
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="icon" type="image/x-icon" href="favicon.png" />
+        <link rel="icon" type="image/x-icon" href="favicon.ico" />
     </head>
     <body mat-app-background>
         <app-root></app-root>
