routing adjusted to use '#', so refreshing the page doesn't 404; updated relative paths so everything loads when building for deployment on a tomcat server; prod build copied to WebContent folder

--- a/nateeubanksREST/WebContent/index.html
+++ b/nateeubanksREST/WebContent/index.html
@@ -21,13 +21,12 @@
         <link rel="icon" type="image/x-icon" href="favicon.ico" />
 
         <title>Nate Eubanks</title>
-        <base href="/" />
-    </head>
+        <base href="/nateeubanksREST/">    <link rel="stylesheet" href="styles.b75674c880de9517b30b.css"></head>
     <body mat-app-background>
         <app-root></app-root>
 
         <!-- Bootstrap core JavaScript -->
         <!-- ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
-    </body>
+    <script type="text/javascript" src="runtime.ec2944dd8b20ec099bf3.js"></script><script type="text/javascript" src="polyfills.c6871e56cb80756a5498.js"></script><script type="text/javascript" src="main.43c1dc94965c9b649dd6.js"></script></body>
 </html>
