adding past shows

--- a/index.html
+++ b/index.html
@@ -80,6 +80,12 @@
                         <ul class="dropdown-menu">
                             <li class="dropdown-header">Recent Shows</li>
                             <li role="separator" class="divider"></li>
+                            <li><a href="#">Budapest, Hungary - BP Comedy house</a></li>
+                            <li><a href="#">Prague, Czechia - Velvet Comedy</a></li>
+                            <li><a href="#">Vienna, Austria - Wein & Comedy</a></li>
+                            <li><a href="#">Bratislava, Slovakia - Joke's On You</a></li>
+                            <li><a href="#">Ljubljana, Slovenia 10KA Klub Smeha</a></li>
+                            <li><a href="#">Kraków, Poland - Kraków Standup Comedy</a></li>
                             <li><a href="http://www.titanee.com/occ">Muscat, Oman - Oman Comedy Central</a></li>
                             <li><a href="https://www.facebook.com/Standuperi/">Tbilisi, Georgia - STANDUP ერი</a></li>
                             <li><a href="http://www.breakroomdowntown.com/" target="_blank">Topeka, KS - Breakroom</a></li>
